// Original file: proto/eth.proto


export interface TransactionLogKey {
  'transactionHash'?: (string);
  'transactionIndex'?: (number);
  'transactionLogIndex'?: (number);
}

export interface TransactionLogKey__Output {
  'transactionHash': (string);
  'transactionIndex': (number);
  'transactionLogIndex': (number);
}
